Fix save/load bug (#123)